[gd_scene load_steps=22 format=2]

[ext_resource path="res://Characters/enemy/Bobbing_Enemy-3.png" type="Texture" id=1]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-5.png" type="Texture" id=2]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-7.png" type="Texture" id=3]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-2.png" type="Texture" id=4]
[ext_resource path="res://Characters/enemy/Chilling_Enemy_Attack-6.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=6]
[ext_resource path="res://testingthings/DetectWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/enemy/DetectPortal.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy.gd" type="Script" id=10]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-9.png" type="Texture" id=11]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-1.png" type="Texture" id=12]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-8.png" type="Texture" id=13]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-4.png" type="Texture" id=14]
[ext_resource path="res://Characters/enemy/Bobbing_Enemy-6.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.6451, 9.80361 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 2 ), ExtResource( 15 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.75, 22.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 4.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 184.172, 51.305 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 152, 94 )
z_index = 2
collision_layer = 7
collision_mask = 7
script = ExtResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2( 2.27095, 2.64044 )
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0.890196, 0, 1 )
light_mask = 2
position = Vector2( -0.527283, -0.75 )
z_index = -1
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.0837345, 0.101094 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
position = Vector2( -1, -1 )
scale = Vector2( 0.0972181, 0.0975471 )
frames = SubResource( 4 )
animation = "Walk"
frame = 2
playing = true
flip_h = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 5 )
script = ExtResource( 6 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( 1, 20.5 )
shape = SubResource( 7 )

[node name="Detext" type="Area2D" parent="."]
scale = Vector2( 1.08647, 5.49837 )
collision_layer = 4
collision_mask = 4

[node name="Detection" type="CollisionShape2D" parent="Detext"]
position = Vector2( 1.38068, -0.596649 )
rotation = -3.14159
scale = Vector2( 0.127439, -0.0876282 )
shape = SubResource( 8 )

[node name="Attack" type="Timer" parent="."]
wait_time = 0.05

[node name="Walk" type="Timer" parent="."]
wait_time = 0.05

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -29, -6 )
enabled = true

[node name="DetectWall" parent="." instance=ExtResource( 8 )]
position = Vector2( -18, -1 )

[node name="DetectPortal" parent="." instance=ExtResource( 9 )]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Detext" to="." method="_on_Detext_body_entered"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="Walk" to="." method="_on_Walk_timeout"]
